--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -4,7 +4,7 @@
         <div class="card login-card p-4">
           <div class="card-body">
             <div class="text-center mb-4">
-              <img src="/img/2.png" alt="Logo" style="height: 60px;">
+            <a routerLink="/"><img src="/img/2.png" alt="Logo" style="height: 60px;"></a>
               <h4 class="moul mt-2">ភ្លេចពាក្យសម្ងាត់</h4>
             </div>
             <div class="text-center mb-3">សូមបញ្ចូលអ៊ីមែលរបស់អ្នកដើម្បីផ្ទៀងផ្ទាត់កូដ OTP ចូលទៅក្នុងគណនីបាន</div>
