--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,7 +5,7 @@
         <div class="card login-card p-4">
           <div class="card-body">
             <div class="text-center mb-4">
-              <img src="/img/2.png" alt="Logo" style="height: 60px;">
+              <a routerLink="/"><img src="/img/2.png" alt="Logo" style="height: 60px;"></a>
               <h4 class="moul mt-2">ចូលគណនី</h4>
             </div>
             <form #loginForm="ngForm" (ngSubmit)="onLogin(loginForm)">
