--- a/src/app/auth/otp-login/otp-login.component.html
+++ b/src/app/auth/otp-login/otp-login.component.html
@@ -21,7 +21,7 @@
             <div class="card login-card p-4">
                 <div class="card-body">
                     <div class="text-center mb-4">
-                        <img src="/img/2.png" alt="Logo" style="height: 60px;">
+                        <a routerLink="/"><img src="/img/2.png" alt="Logo" style="height: 60px;"></a>
                         <h4 class="moul mt-2">ចូលគណនីតាមរយៈលេខកូដ OTP</h4>
                     </div>
                     <div class="text-center">សូមផ្ទៀងផ្ទាត់លេខកូដ​ OTP ដើម្បីចូលគណនីរបស់អ្នក</div>
