--- a/src/app/course-detail/course-detail.component.css
+++ b/src/app/course-detail/course-detail.component.css
@@ -80,3 +80,26 @@
   align-items: center;
   font-size: 18px;
 }
+.content-container {
+  padding: 20px;
+  font-family: 'Khmer OS Battambang', 'Noto Sans Khmer', sans-serif;
+}
+
+.content-list {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+.content-list li {
+  /* font-size: 18px; */
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.check-icon {
+  color: #000;
+  margin-right: 8px;
+  /* font-size: 20px; */
+}
