--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -16,10 +16,10 @@
               <span class="badge bg-primary mb-2" style="font-size: 0.75rem;">{{ item.course_name }}</span>
               <ul class="list-inline text-muted small mb-2 text-nowrap">
                 <li class="list-inline-item me-3">
-                  <i class="bi bi-book"></i> 12 Lessons
+                  <i class="bi bi-book"></i> 12 មេរៀន
                 </li>
                 <li class="list-inline-item me-3">
-                  <i class="bi bi-clock"></i> 4 Week
+                  <i class="bi bi-clock"></i> 4 សប្ដាហ៍
                 </li>
               </ul>
               <div class="mb-2">
