--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,9 +4,15 @@
     
     <!-- Logo -->
     <div class="col-6 col-md-4 ps-4">
-      <a >
-        <img src="/img/pcc-logo.png" alt="Logo" class="img-fluid" style="max-width: 200px;">
-      </a>
+      <!-- <a >
+        <i class="fa-solid fa-arrow-left me-2 d-none d-sm-inline"></i>
+ <img src="/img/pcc-logo.png" alt="Logo" class="img-fluid" style="max-width: 200px;">
+      </a> -->
+      <a href="#" class="text-white text-decoration-none" onclick="history.back(); return false;">
+  <!-- <i class="fa-solid fa-arrow-left me-2 d-none d-sm-inline"></i> -->
+  <!-- <i class="me-2 d-none d-sm-inline"><img src="/img/download (1).png" width="30" alt=""></i> -->
+  <img src="/img/pcc-logo.png" alt="Logo" class="img-fluid" style="max-width: 200px;">
+</a>
     </div>
 
     <!-- Spacer for large screens -->
