--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,13 @@
 <div class="container-fuild header">
  <app-home-header></app-home-header>
 </div>
-<div class="container-fluid gradient-wrapper py-5">
-  <div class="container">
+<div class="container-fluid">
     <div class="row">
       <div class="col-12">
         <app-slider></app-slider>
       </div>
     </div>
-  </div>
 </div>
-
 <!-- Centered loader -->
 <div *ngIf="loading" class="loader-wrapper">
   <div class="loader"></div>
@@ -19,7 +16,7 @@
 <div class="container position-relative">
 <!-- ព័ត៌មានថ្មី -->
 <div class="row">
-  <div class="col-12 mb-3  fs-4 text-danger border-bottom p-2 ps-3 ">ព័ត៌មានថ្មី</div>
+  <div class="col-12 mb-3  fs-4 text-danger border-bottom  ps-3">ព័ត៌មានថ្មី</div>
   <app-news></app-news>
 </div>
 <!-- វគ្គសិក្សាពេញនិយម -->
