--- a/src/app/new-news/new-news.component.html
+++ b/src/app/new-news/new-news.component.html
@@ -9,9 +9,9 @@
     <div class="col-12 col-md-12 col-lg-10 mt-3 overflow-hidden">
       <!-- វគ្គសិក្សាពេញនិយម -->
       <div class="row mt-5">
-        <div class="col-12 mb-3 mt-3 ps-3 fs-4 text-danger border-bottom p-2">វគ្គសិក្សាពេញនិយម</div>
+        <div class="col-12 mb-3 mt-3 ps-3 fs-4 text-danger border-bottom p-2">ព័ត៌មានថ្មីៗ</div>
 
-        <app-courses></app-courses>
+        <app-news></app-news>
 
       </div>
       <!--ចក្ខុវិស័យ  -->
