--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -5,7 +5,7 @@
       <div class="card register-card p-4">
         <div class="card-body">
           <div class="text-center mb-4">
-            <img src="/img/2.png" alt="Logo" style="height: 60px;">
+           <a routerLink="/"><img src="/img/2.png" alt="Logo" style="height: 60px;"></a>
             <h4 class="moul mt-2">បង្កើតគណនី</h4>
           </div>
 
