--- a/src/app/lesson/lesson.component.css
+++ b/src/app/lesson/lesson.component.css
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Inter', sans-serif;
+  /* font-family: 'Inter', sans-serif; */
 }
 
 body {
@@ -66,7 +66,7 @@ main {
 video.video-section {
   width: 100%;
   border-radius: 12px;
-  height: 250px;
+  height: 400px;
   object-fit: cover;
 }
 
@@ -153,3 +153,7 @@ video.video-section {
   border: 1px solid #ccc;
   border-radius: 6px;
 }
+.content-list{
+  list-style: none;
+}
+
