--- a/src/app/side-bar2/side-bar2.component.html
+++ b/src/app/side-bar2/side-bar2.component.html
@@ -9,7 +9,7 @@
           <li class="nav-item"><a routerLink="/myLesson" routerLinkActive="active" class="nav-link"><i class="fa-solid fa-book"></i><span class="nav-label">មេរៀនរបស់ខ្ញុំ</span></a></li>
           <!-- <li class="nav-item"><a routerLink="/" routerLinkActive="active" class="nav-link"><i class="fa-solid fa-gift"></i><span class="nav-label">ឥតគិតថ្លៃ</span></a></li> -->
           <li class="nav-item"><a routerLink="/dashboard" routerLinkActive="active" class="nav-link"><i class="fa-solid fa-film"></i><span class="nav-label">វគ្គសិក្សា</span></a></li>
-          <li class="nav-item"><a href="#" routerLinkActive="active" class="nav-link"><i class="fa-solid fa-bullhorn"></i><span class="nav-label">ព័ត៌មានថ្មីៗ</span></a></li>
+          <li class="nav-item"><a routerLink="/new-news" routerLinkActive="active" class="nav-link"><i class="fa-solid fa-bullhorn"></i><span class="nav-label">ព័ត៌មានថ្មីៗ</span></a></li>
         </ul>
         <ul class="nav-list secondary-nav fs-5">
           <li class="nav-item"><a class="nav-link" (click)="logout()" style="cursor: pointer;"><i class="fa-solid fa-sign-out-alt"></i><span class="nav-label">ចេញ</span></a></li>
@@ -27,3 +27,4 @@
   <a routerLink="/myLesson" class="nav-icon"><i class="fa-solid fa-book"></i><small>មេរៀនរបស់ខ្ញុំ</small></a>
   <a (click)="logout()" class="nav-icon"><i class="fa-solid fa-sign-out-alt"></i><small>ចេញ</small></a>
 </nav>
+
