--- a/src/app/lesson/lesson.component.html
+++ b/src/app/lesson/lesson.component.html
@@ -43,7 +43,7 @@
           </video>
 
           <!-- Additional Materials -->
-          <h2 class="mt-3">ពណ៌នាអំពីមេរៀន</h2>
+          <h2 class="mt-3">ពណ៌នាអំពីមេរៀនទាំងអស់</h2>
           <div class="bg-light p-3 rounded mt-2">
             <!-- If contents exist -->
             <div *ngIf="contents.length > 0; else noContent">
@@ -54,7 +54,6 @@
                 </li>
               </ul>
             </div>
-
             <!-- If no contents -->
             <ng-template #noContent>
               <p class="text-muted">មេរៀននេះមិនមានបញ្ជាក់អំពីមាតិកាទេ។</p>
