--- a/src/app/personal/personal.component.html
+++ b/src/app/personal/personal.component.html
@@ -30,7 +30,8 @@
             <input type="text" [value]="profile.email" class="form-control" readonly>
           </div>
           <div class="mb-3 text-center">
-            <button (click)="onLogout()" class="btn btn-blue text-white">ចេញពីគណនីរបស់អ្នក</button>
+            <button (click)="onLogout()" class="btn btn-blue me-2 text-white">ចេញពីគណនីរបស់អ្នក</button>
+             <a routerLink="/invoice" class="btn btn-primary text-white">ទាញយកវិក័យបត្រ</a>
           </div>
         </div>
         <div class="col-2"></div>
