--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -11,7 +11,7 @@
             <form #loginForm="ngForm" (ngSubmit)="onLogin(loginForm)">
               <div class="mb-3">
                 <label for="email" class="form-label">អ៊ីមែល</label>
-                <input type="email" class="form-control" id="email" placeholder="name@example.com" [(ngModel)]="email" name="email" required ngModel>
+                <input type="email" class="form-control" id="email" placeholder="example@gmail.com" [(ngModel)]="email" name="email" required ngModel>
               </div>
               <div class="mb-3">
                 <label for="password" class="form-label">លេខសម្ងាត់</label>
