--- a/src/app/course-detail/course-detail.component.css
+++ b/src/app/course-detail/course-detail.component.css
@@ -13,7 +13,7 @@
   aspect-ratio: 1;
   align-items: center;
   border-radius: 50%;
-  background: #262a95;
+  background: blue;
   --_m: 
     conic-gradient(#0000 10%,#000),
     linear-gradient(#000 0 0) content-box;
