--- a/src/app/mylesson/mylesson.component.css
+++ b/src/app/mylesson/mylesson.component.css
@@ -3,7 +3,35 @@
     position: fixed;
     z-index: 99999999999;
 }
+/* Loader */
+.loader-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
+}
+.loader {
+  width: 50px;
+  padding: 8px;
+  aspect-ratio: 1;
+  align-items: center;
+  border-radius: 50%;
+  background: blue;
+  --_m: 
+    conic-gradient(#0000 10%,#000),
+    linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+          mask: var(--_m);
+  -webkit-mask-composite: source-out;
+          mask-composite: subtract;
+  animation: l3 1s infinite linear;
+}
 
+@keyframes l3 {
+  to {
+    transform: rotate(1turn);
+  }
+}
 .modal-overlay {
   position: fixed;
   top: 0;
