--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -1,42 +1,14 @@
-/* .shadow-card{
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+/* Optional scrollbar styling */
+::-webkit-scrollbar {
+  height: 10px;
 }
-/* .overflow-auto::-webkit-scrollbar {
-    display: none;  
-} 
-.news-scroll-container {
-  scroll-behavior: smooth;
-  -webkit-overflow-scrolling: touch;
+::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 5px;
 }
-
-.news-scroll-container::-webkit-scrollbar {
-  height: 6px;
+::-webkit-scrollbar-thumb:hover {
+  background-color: #888;
 }
-.news-scroll-container::-webkit-scrollbar-thumb {
-  background: #ccc;
-  border-radius: 3px;
-}
-
-.news-slider-wrapper {
-  width: 100%;
-  overflow: hidden;
-  position: relative;
-}
-
-.news-slider {
-  display: flex;
-  animation: slideNews 30s linear infinite;
-}
-
-@keyframes slideNews {
-  0% {
-    transform: translateX(0%);
-  }
-  100% {
-    transform: translateX(-50%);
-  }
-}
- */
 
  .hero {
       background-color: #eaf0ff;
